# ogstools

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  donation.md  pyproject.toml  pytest.ini  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
EXPERIMENTAL/PreProcessing/: README.md  ranmedi.py  ranmedi1D.py  ranmedi2D.py  ranmedi3D.py  ranmediVTU.py
EXPERIMENTAL/shp2msh/: README.MD  shp2mesh.py
Physics/water/: setup.py
docs/: Makefile  conf.py  development.md  development.rst  gallery_hashes.json  gallery_hashes.py  index.md  index.rst  make.bat  requirements.txt  server.py  toxin
docs/_static/: hide_links.css  ogstools.css
docs/_templates/: layout.html
docs/development/: examples_guidelines.md  index.md
docs/examples/: README.rst  index.md
docs/reference/: index.md
docs/releases/: index.md  ogstools-0.0.3.md  ogstools-0.1.0.md  ogstools-0.1.1.md  ogstools-0.2.0.md  ogstools-0.3.0.md  ogstools-0.3.1.md  ogstools-0.4.0.md  ogstools-0.5.0.md  ogstools-0.6.0.md  ogstools-0.7.0.md  ogstools-0.7.1.md  ogstools-0.8.0.md  ogstools-0.x.md
docs/user-guide/: README.rst  docker.md  fe2vtu.md  feflowlib.md  index.md  logparser.md  meshlib.md  meshplotlib.md  monitor.md  motivation.md  msh2vtu.md  nuclearwasteheat.md  ogs6py.md  plot.md  plot_materiallib.py  plot_meshes_from_yaml.py  plot_msh2vtu.py  plot_ogs_interactive_mesh_native.py  plot_ogs_interactive_meshes_from_simulator.py  plot_ogs_interactive_simulator.py  plot_plot.py  plot_simulate.py  plot_simulate_cosim.py  propertylib.md  repoheat.md  run_simulation.md  shapemeshlib.md  studies.md  third-party.md  variables.md
ogstools/: __init__.py  _find_ogs.py  _internal.py  definitions.py  find_ogs.py
ogstools/_cli/: provide_ogs_cli_tools_via_wheel.py  wrap_cli_tools.py
ogstools/_examples/: 2D.pvd  2D_ts_0_t_0e+00.vtu  elder.h5
ogstools/cli/: __init__.py  provide_ogs_cli_tools_via_wheel.py  wrap_cli_tools.py
ogstools/core/: execution.py  execution_default_example.yml  interactive_simulation_controller.py  model.py  native_simulation_controller.py  result.py  simulation.py  simulation_controller.py  storage.py
ogstools/examples/: __init__.py
ogstools/fe2vtu/: README.md  __init__.py  _cli.py  fe2vtu.py  fepython80  tools.py
ogstools/feflowlib/: README.md  _FeflowModel.py  __init__.py  _cli.py  _feflowModel.py  _feflowlib.py  _prj_tools.py  _templates.py  _tools.py  feflowModel.py  feflow_model.py  feflowlib.py  templates.py  testMPL.vtk  testMPL.vtu  tools.py
ogstools/gmsh_tools/: __init__.py  meshing.py
ogstools/logparser/: __init__.py  common_ogs_analyses.py  log.py  log_file_handler.py  log_parser.py  monitor.py  monitor_app.py  monitor_cli.py  ogs_regexes.py  plots.py  regexes.py
ogstools/materiallib/: __init__.py  integrator.py  todo.md  validation.py
ogstools/mesh/: README.md  __init__.py  cosim.py  differences.py  file_io.py  geo.py  ip_data.py  ip_mesh.py  utils.py  vtk_pyvista.py
ogstools/meshes/: __init__.py  _meshes.py  _meshes_from_yaml.py  gmsh_BHE.py  gmsh_converter.py  meshes_from_yaml_cli.py  subdomains.py
ogstools/meshlib/: README.md  __init__.py  _utils.py  boundary.py  boundary_set.py  boundary_subset.py  cosim.py  data_dict.py  data_processing.py  geo.py  gmsh_BHE.py  gmsh_converter.py  gmsh_meshing.py  ip_mesh.py  mesh.py  mesh_series.py  meshes.py  meshes_from_yaml.py  meshes_from_yaml_cli.py  plot_convergence.ipynb  refine_mesh.py  shape_meshing.py  shape_meshing_utils.py  shp2msh_cli.py  subdomains.py  vtk_pyvista.py  xdmf_reader.py
ogstools/meshplotlib/: README.md  TODO  __init__.py  _plot_setup.py  animation.py  core.py  default_setup.py  image_tools.py  levels.py  mesh.py  mesh_series.py  plot_features.py  plot_setup.py  plot_setup_defaults.py  test_meshplotlib.py  utils.py
ogstools/meshseries/: __init__.py  _meshseries.py  data_dict.py  xdmf_reader.py
ogstools/msh2vtu/: README.md  __init__.py  __main__.py  _cli.py  cli.py  converter.py
ogstools/ogs6py/: __init__.py  build_tree.py  curves.py  display.py  geo.py  linsolvers.py  local_coordinate_system.py  media.py  mesh.py  nonlinsolvers.py  ogs.py  parameters.py  processes.py  processvars.py  project.py  project_media_importer.py  properties.py  python_script.py  referenced_file.py  timeloop.py
ogstools/ogs_model/: __init__.py  ogs_model.py
ogstools/physics/: __init__.py
ogstools/plot/: README.md  __init__.py  animation.py  contourplots.py  contourplots_pv.py  features.py  heatmaps.py  levels.py  lineplots.py  plot_setup.py  plot_setup_defaults.py  shared.py  utils.py  vectorplots.py
ogstools/propertylib/: README.md  __init__.py  _coupled.py  _engfuncs.py  _mathfuncs.py  _uncoupled.py  custom_colormaps.py  defaults.py  matrix.py  mesh_dependent.py  presets.py  properties.py  property.py  property_collection.py  tensor_math.py  test_propertylib.py  unit_registry.py  utils.py  vector.py  vector2scalar.py
ogstools/repoheat/: __init__.py  _models.py  nuclearwaste.py  test_repoheat.py
paper/: paper.bib  paper.md  review_florian.md
requirements/: requirements_allextras_py3_10.txt  requirements_allextras_py3_11.txt  requirements_allextras_py3_12.txt  requirements_allextras_py3_13.txt  requirements_py3_10.txt  requirements_py3_11.txt  requirements_py3_12.txt  requirements_py3_13.txt  requirements_py3_14.txt
scripts/: pull_containers.py  update_tests.py
tests/: conftest.py  test_bhe_mesh.py  test_cli.py  test_fe2vtu.py  test_feflowlib.py  test_framework.py  test_ip_data.py  test_logparser.py  test_materiallib.py  test_mechanics.py  test_mesh.py  test_meshes.py  test_meshes_from_gmsh.py  test_meshes_from_yaml.py  test_meshlib.py  test_meshplotlib.py  test_meshseries.py  test_model.py  test_msh2vtu.py  test_nuclearwasteheat.py  test_ogs6py.py  test_ogs_model.py  test_ogstools.py  test_plot.py  test_propertylib.py  test_run_simulation_interactive.py  test_shapefile_meshing.py  test_shapemeshlib.py  test_simulation.py  test_storage.py  test_studies_convergence.py  test_variables.py  test_xsd.py
(+593 files in other folders)
