[build-system]
requires = ['setuptools', 'setuptools_scm[toml]']
build-backend = 'setuptools.build_meta'

[project]
name = "ogstools"
dynamic = ["version"]
description = "A collection of Python tools aimed at evolving into a modeling toolchain around OpenGeoSys."
authors = [{ name = 'OpenGeoSys Community', email = 'info@opengeosys.org' }]
license = { text = "BSD-3-Clause" }
keywords = ["opengeosys", "geoscience", "subsurface modeling", "hydrogeology", "numerical simulation", "finite element method", "groundwater flow", "geochemistry", "geotechnical engineering", "porous media", "contaminant transport", "mesh generation", "data visualization", "scientific computing", "open-source software"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]
readme = "README.md"
requires-python = '>=3.10'
dependencies = [
  "gmsh>=4.12.0",
  "h5py>=3.8.0",
  "jupytext>=1.14.0",
  "matplotlib>=3.7.1",
  "meshio>=5.3.0",
  "pyvista[all]>=0.40.1",
  "numpy>=1.20.0",
  "scipy>=1.10.1",
  "Pint>=0.22",
  "papermill>=2.4.0",
  "pandamesh>=0.2.1",
  # meshing algorithm changed with this version
  "typeguard>=4.0.0",
  "lxml>=4.6.0",
  "ogs>=6.5.4",
  "pandas>=2.2.3",
]

[project.urls]
"Documentation" = 'https://ogstools.opengeosys.org'
"Bug Tracker" = 'https://discourse.opengeosys.org'
"Source Code" = 'https://gitlab.opengeosys.org/ogs/tools/ogstools'

[tool.setuptools.packages.find]
where = ["."]
include = ["ogstools*"]
namespaces = false

[tool.setuptools_scm]
version_scheme = "no-guess-dev"         # would increment version otherwise
fallback_version = "0.1.0.post0+no-scm" # Manually increment on release!

[project.scripts]
msh2vtu = 'ogstools.msh2vtu._cli:cli'
feflow2ogs = 'ogstools.feflowlib._cli:cli'
shp2msh = 'ogstools.meshlib.shp2msh_cli:cli'

[project.optional-dependencies]


pinned = [
  "aiohappyeyeballs==2.4.4",
  "aiohttp==3.11.11",
  "aiosignal==1.3.2",
  "ansicolors==1.1.8",
  "anyio==4.8.0",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "arrow==1.3.0",
  "asttokens==3.0.0",
  "attrs==24.3.0",
  "beautifulsoup4==4.12.3",
  "bleach==6.2.0",
  "certifi==2024.12.14",
  "cffi==1.17.1",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "cmocean==4.0.3",
  "colorcet==3.1.0",
  "comm==0.2.2",
  "contourpy==1.3.1",
  "cycler==0.12.1",
  "decorator==5.1.1",
  "defusedxml==0.7.1",
  "entrypoints==0.4",
  "executing==2.1.0",
  "fastjsonschema==2.21.1",
  "flexcache==0.3",
  "flexparser==0.4",
  "fonttools==4.55.3",
  "fqdn==1.5.1",
  "frozenlist==1.5.0",
  "geopandas==1.0.1",
  "gmsh==4.13.1",
  "h5py==3.12.1",
  "idna==3.10",
  "imageio==2.36.1",
  "ipython==8.31.0",
  "ipywidgets==8.1.5",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "Jinja2==3.1.5",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "jupyter-events==0.11.0",
  "jupyter_client==8.6.3",
  "jupyter_core==5.7.2",
  "jupyter_server==2.15.0",
  "jupyter_server_proxy==4.4.0",
  "jupyter_server_terminals==0.5.3",
  "jupyterlab_pygments==0.3.0",
  "jupyterlab_widgets==3.0.13",
  "jupytext==1.16.6",
  "kiwisolver==1.4.8",
  "lxml==5.3.0",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.0",
  "matplotlib-inline==0.1.7",
  "mdit-py-plugins==0.4.2",
  "mdurl==0.1.2",
  "meshio==5.3.5",
  "mistune==3.1.0",
  "more-itertools==10.5.0",
  "msgpack==1.1.0",
  "multidict==6.1.0",
  "nbclient==0.10.2",
  "nbconvert==7.16.5",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "numpy==2.2.1",
  "ogs==6.5.4",
  "overrides==7.7.0",
  "packaging==24.2",
  "pandamesh==0.2.2",
  "pandas==2.2.3",
  "pandocfilters==1.5.1",
  "papermill==2.6.0",
  "parso==0.8.4",
  "pexpect==4.9.0",
  "pillow==11.1.0",
  "Pint==0.24.4",
  "platformdirs==4.3.6",
  "pooch==1.8.2",
  "prometheus_client==0.21.1",
  "prompt_toolkit==3.0.48",
  "propcache==0.2.1",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "pycparser==2.22",
  "Pygments==2.19.1",
  "pyogrio==0.10.0",
  "pyparsing==3.2.1",
  "pyproj==3.7.0",
  "python-dateutil==2.9.0.post0",
  "python-json-logger==3.2.1",
  "pytz==2024.2",
  "pyvista==0.44.1",
  "PyYAML==6.0.2",
  "pyzmq==26.2.0",
  "referencing==0.35.1",
  "requests==2.32.3",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rich==13.9.4",
  "rpds-py==0.22.3",
  "scipy==1.15.0",
  "scooby==0.10.0",
  "Send2Trash==1.8.3",
  "shapely==2.0.6",
  "simpervisor==1.0.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.6",
  "stack-data==0.6.3",
  "tenacity==9.0.0",
  "terminado==0.18.1",
  "tinycss2==1.4.0",
  "tornado==6.4.2",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "trame==3.7.6",
  "trame-client==3.5.1",
  "trame-server==3.2.7",
  "trame-vtk==2.8.13",
  "trame-vuetify==2.8.0",
  "triangle==20250106",
  "typeguard==4.4.1",
  "types-python-dateutil==2.9.0.20241206",
  "typing_extensions==4.12.2",
  "tzdata==2024.2",
  "uri-template==1.3.0",
  "urllib3==2.3.0",
  "vtk==9.4.1",
  "wcwidth==0.2.13",
  "webcolors==24.11.1",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "widgetsnbextension==4.0.13",
  "wslink==2.2.2",
  "yarl==1.18.3"
]


dev = ["pre-commit>=2.20", "build", "black"]
test = ["coverage", "parameterized","pytest", "pytest-xdist", "pytest-dependency",]
docs = [
  "livereload",
  "myst-parser",
  "myst_nb",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-argparse >=0.2.5, <0.5.0",
  "sphinx-design",
  "sphinx_gallery",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-programoutput",
  "trame-vtk>=2.6.0",
]
feflow = [
  "ifm_contrib>=0.2.3",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
  "--log-cli-level=INFO",
  "--tb=short",
]
xfail_strict = true
# TODO: LB enable this again, deal with MatplotlibDeprecationWarning in fe2vtu
# tests
#filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]

[tool.black]
line-length = 80
exclude = '.*/examples/.*'

[tool.mypy]
files = "ogstools/**/*.py"
# does not work when mypy invoked directly, works in pre-commit as explicitly
# stated there again:
exclude = ['.*/examples/.*']
ignore_missing_imports = true
scripts_are_modules = true
# Set to true when current issues are fixed
strict = false
# Delete following lines when strict is true:
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true
enable_incomplete_feature = ["Unpack"]
show_absolute_path = true

[tool.ruff]
target-version = "py310"
exclude = ["EXPERIMENTAL"]
line-length = 80

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",    # flake8
  "B",
  "B904", # flake8-bugbear
  "I",    # isort
  "ARG",  # flake8-unused-arguments
  "C4",   # flake8-comprehensions
  "EM",   # flake8-errmsg
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "G",    # flake8-logging-format
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
  "EXE",  # flake8-executable
  "NPY",  # NumPy specific rules
  "PD",   # pandas-vet
]
extend-ignore = [
  "PLR",   # Design related pylint codes
  "E501",  # Line too long
  "PT004", # Use underscore for non-returning fixture (use usefixture instead)
  # RUF005 should be disabled when using numpy, see
  # https://github.com/charliermarsh/ruff/issues/2142:
  "RUF005",
  "PT009",  # can use unittest-assertion
]
typing-modules = ["mypackage._compat.typing"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
flake8-unused-arguments.ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"docs/examples/**" = ["B018"]

[tool.codespell]
ignore-words-list = "methode,ot"
skip = "*.vtu"
