[build-system]
requires = ['setuptools', 'setuptools_scm[toml]']
build-backend = 'setuptools.build_meta'

[project]
name = "ogstools"
dynamic = ["version"]
description = "A collection of Python tools aimed at evolving into a modeling toolchain around OpenGeoSys."
authors = [{ name = 'OpenGeoSys Community', email = 'info@opengeosys.org' }]
license = { text = "BSD-3-Clause" }
keywords = ["opengeosys", "geoscience", "subsurface modeling", "hydrogeology", "numerical simulation", "finite element method", "groundwater flow", "geochemistry", "geotechnical engineering", "porous media", "contaminant transport", "mesh generation", "data visualization", "scientific computing", "open-source software"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]
readme = "README.md"
requires-python = '>=3.10'
dependencies = [
  "gmsh>=4.12.0",
  "h5py>=3.8.0",
  "json5>=0.12.0",
  "jupytext>=1.14.0",
  "matplotlib>=3.7.1",
  "meshio>=5.3.0",
  "pyvista[all]>=0.40.1,<=0.45.3", # TODO maintainer
  "numpy>=1.20.0",
  "scipy>=1.10.1",
  "shapely>=2.0.0",
  "simpleeval>=1.0.3",
  "Pint>=0.22",
  "papermill>=2.4.0",
  "typeguard>=4.0.0",
  "lxml>=4.6.0",
  "pandas>=2.2.3",
  "psutil>=6.0.0",
  "watchdog>=6.0.0",
  "PyYAML>=6.0.0",
  "types-PyYAML>=6.0.0.20240917"
]

[project.urls]
"Documentation" = 'https://ogstools.opengeosys.org'
"Bug Tracker" = 'https://discourse.opengeosys.org'
"Source Code" = 'https://gitlab.opengeosys.org/ogs/tools/ogstools'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ogstools*"]
namespaces = false

[tool.setuptools_scm]
version_scheme = "no-guess-dev"         # would increment version otherwise
local_scheme = "dirty-tag"
fallback_version = "0.7.0+no-scm" # Manually increment on release!

[project.scripts]
msh2vtu = 'ogstools.msh2vtu._cli:cli'
feflow2ogs = 'ogstools.feflowlib._cli:cli'
yaml2vtu = 'ogstools.meshlib.meshes_from_yaml_cli:cli'

[project.optional-dependencies]

pinned = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.12.13",
  "aiosignal==1.3.2",
  "ansicolors==1.1.8",
  "anyio==4.9.0",
  "argon2-cffi==25.1.0",
  "argon2-cffi-bindings==21.2.0",
  "arrow==1.3.0",
  "asttokens==3.0.0",
  "attrs==25.3.0",
  "beautifulsoup4==4.13.4",
  "bleach==6.2.0",
  "certifi==2025.6.15",
  "cffi==1.17.1",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "cmocean==4.0.3",
  "colorcet==3.1.0",
  "comm==0.2.2",
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "decorator==5.2.1",
  "defusedxml==0.7.1",
  "entrypoints==0.4",
  "executing==2.2.0",
  "fastjsonschema==2.21.1",
  "flexcache==0.3",
  "flexparser==0.4",
  "fonttools==4.58.4",
  "fqdn==1.5.1",
  "frozenlist==1.7.0",
  "gmsh==4.13.1",
  "h5py==3.14.0",
  "idna==3.10",
  "imageio==2.37.0",
  "ipython==8.37.0; python_version == '3.10'",
  "ipython==9.3.0; python_version != '3.10'",
  "ipywidgets==8.1.7",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "Jinja2==3.1.6",
  "json5==0.12.0",
  "jsonpointer==3.0.0",
  "jsonschema==4.24.0",
  "jsonschema-specifications==2025.4.1",
  "jupyter-events==0.12.0",
  "jupyter_client==8.6.3",
  "jupyter_core==5.8.1",
  "jupyter_server==2.16.0",
  "jupyter_server_proxy==4.4.0",
  "jupyter_server_terminals==0.5.3",
  "jupyterlab_pygments==0.3.0",
  "jupyterlab_widgets==3.0.15",
  "jupytext==1.17.2",
  "kiwisolver==1.4.8",
  "lxml==5.4.0",
  "markdown-it-py==3.0.0",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.3",
  "matplotlib-inline==0.1.7",
  "mdit-py-plugins==0.4.2",
  "mdurl==0.1.2",
  "meshio==5.3.5",
  "mistune==3.1.3",
  "more-itertools==10.7.0",
  "msgpack==1.1.1",
  "multidict==6.4.4",
  "nbclient==0.10.2",
  "nbconvert==7.16.6",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "numpy==2.2.6",
  "ogs==6.5.6",
  "overrides==7.7.0",
  "packaging==25.0",
  "pandas==2.3.0",
  "pandocfilters==1.5.1",
  "papermill==2.6.0",
  "parso==0.8.4",
  "pexpect==4.9.0",
  "pillow==11.2.1",
  "Pint==0.24.4",
  "platformdirs==4.3.8",
  "pooch==1.8.2",
  "prometheus_client==0.22.1",
  "prompt_toolkit==3.0.51",
  "propcache==0.3.2",
  "psutil==7.0.0",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "pycparser==2.22",
  "Pygments==2.19.1",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "python-json-logger==3.3.0",
  "pytz==2025.2",
  "pyvista==0.45.2",
  "PyYAML>=6.0.0",
  "pyzmq==27.0.0",
  "referencing==0.36.2",
  "requests==2.32.4",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rich==14.0.0",
  "rpds-py==0.25.1",
  "scipy==1.15.3",
  "scooby==0.10.1",
  "Send2Trash==1.8.3",
  "shapely==2.1.1",
  "simpervisor==1.0.0",
  "simpleeval==1.0.3",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.7",
  "stack-data==0.6.3",
  "tenacity==9.1.2",
  "terminado==0.18.1",
  "tinycss2==1.4.0",
  "tornado==6.5.1",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "trame==3.10.2",
  "trame-client==3.9.1",
  "trame-common==1.0.0",
  "trame-server==3.4.2",
  "trame-vtk==2.8.17",
  "trame-vuetify==3.0.1",
  "typeguard==4.4.3",
  "types-python-dateutil==2.9.0.20250516",
  "types-PyYAML>=6.0.0.20240917",
  "typing_extensions==4.14.0",
  "tzdata==2025.2",
  "uri-template==1.3.0",
  "urllib3==2.4.0",
  "vtk==9.4.2",
  "watchdog==6.0.0",
  "wcwidth==0.2.13",
  "webcolors==24.11.1",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "widgetsnbextension==4.0.14",
  "wslink==2.3.4",
  "xyzservices==2025.4.0",
  "yarl==1.20.1"
]



dev = ["pre-commit>=2.20", "build", "black==24.4.0"]
test = ["coverage", "hypothesis", "pytest", "pytest-xdist", "pytest-dependency"]
docs = [
  "livereload",
  "myst-parser",
  "myst_nb",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-argparse >=0.2.5, <0.5.0",
  "sphinx-design",
  "sphinx_gallery",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-programoutput",
  "snowballstemmer<3.0.0",
  "trame-vtk>=2.6.0",
  "pagefind[extended]",
]
feflow = [
  "ifm_contrib>=0.2.4",
]
ogs = ["ogs>=6.5.6"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
  "--log-cli-level=INFO",
  "--tb=short",
]
xfail_strict = true
# TODO: LB enable this again, deal with MatplotlibDeprecationWarning in fe2vtu
# tests
#filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]


[tool.black]
line-length = 80
exclude = '.*/examples/.*'

[tool.mypy]
files = "ogstools/**/*.py"
# does not work when mypy invoked directly, works in pre-commit as explicitly
# stated there again:
exclude = ['.*/examples/.*']
ignore_missing_imports = true
scripts_are_modules = true
# Set to true when current issues are fixed
strict = false
# Delete following lines when strict is true:
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true
enable_incomplete_feature = ["Unpack"]
show_absolute_path = true

[tool.ruff]
target-version = "py310"
exclude = ["EXPERIMENTAL"]
line-length = 80

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",    # flake8
  "B",
  "B904", # flake8-bugbear
  "I",    # isort
  "ARG",  # flake8-unused-arguments
  "C4",   # flake8-comprehensions
  "EM",   # flake8-errmsg
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "G",    # flake8-logging-format
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
  "EXE",  # flake8-executable
  "NPY",  # NumPy specific rules
  "PD",   # pandas-vet
]
extend-ignore = [
  "PLR",   # Design related pylint codes
  "E501",  # Line too long
  "PT004", # Use underscore for non-returning fixture (use usefixture instead)
  # RUF005 should be disabled when using numpy, see
  # https://github.com/charliermarsh/ruff/issues/2142:
  "RUF005",
  "PT009",  # can use unittest-assertion
]
typing-modules = ["mypackage._compat.typing"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
flake8-unused-arguments.ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"docs/examples/**" = ["B018"]

[tool.codespell]
ignore-words-list = "methode,ot"
skip = "*.vtu"

[tool.pyright]
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportArgumentType = false
reportCallIssue = false
