[build-system]
requires = ['setuptools', 'setuptools_scm[toml]']
build-backend = 'setuptools.build_meta'

[project]
name = "ogstools"
dynamic = ["version"]
description = "A collection of Python tools aimed at evolving into a modeling toolchain around OpenGeoSys."
authors = [{ name = 'OpenGeoSys Community', email = 'info@opengeosys.org' }]
license = { text = "BSD-3-Clause" }
keywords = [
  "opengeosys",
  "geoscience",
  "subsurface modeling",
  "hydrogeology",
  "numerical simulation",
  "finite element method",
  "groundwater flow",
  "geochemistry",
  "geotechnical engineering",
  "porous media",
  "contaminant transport",
  "mesh generation",
  "data visualization",
  "scientific computing",
  "open-source software",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = '>=3.11'
dependencies = [
  "gmsh>=4.12.0,<4.15",
  "h5py>=3.8.0",
  "json5>=0.12.0",
  "jupytext>=1.14.0",
  "matplotlib>=3.7.1",
  "meshio>=5.3.0",
  "pyvista[all]>=0.47.0",
  "numpy>=1.20.0",
  "scipy>=1.10.1",
  "shapely>=2.0.0",
  "simpleeval>=1.0.3",
  "Pint>=0.22",
  "papermill>=2.4.0",
  "typeguard>=4.0.0",
  "lxml>=4.6.0",
  "pandas>=2.2.3",
  "psutil>=5.0.0",
  "watchdog>=6.0.0",
  "PyYAML>=6.0.0",
  "types-PyYAML>=6.0.0.20240917",
  "vtk>=9.4.0",
  "pytest-mpl>=0.17.0",
  "imagehash>=4.3.2",
]

[project.urls]
"Documentation" = 'https://ogstools.opengeosys.org'
"Bug Tracker" = 'https://discourse.opengeosys.org'
"Source Code" = 'https://gitlab.opengeosys.org/ogs/tools/ogstools'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ogstools*"]
namespaces = false

[tool.setuptools_scm]
version_scheme = "no-guess-dev"   # would increment version otherwise
local_scheme = "dirty-tag"
fallback_version = "0.7.0+no-scm" # Manually increment on release!

[project.scripts]
msh2vtu = 'ogstools.msh2vtu._cli:cli'
feflow2ogs = 'ogstools.feflowlib._cli:cli'
yaml2vtu = 'ogstools.meshlib.meshes_from_yaml_cli:cli'

[project.optional-dependencies]

pinned = [
  "accessible-pygments==0.0.5",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.3",
  "aiosignal==1.4.0",
  "alabaster==1.0.0",
  "ansicolors==1.1.8",
  "anyio==4.12.1",
  "argon2-cffi==25.1.0",
  "argon2-cffi-bindings==25.1.0",
  "arrow==1.4.0",
  "asttokens==3.0.1",
  "attrs==25.4.0",
  "babel==2.18.0",
  "beautifulsoup4==4.14.3",
  "black==24.4.0",
  "bleach==6.3.0",
  "bokeh==3.8.2",
  "build==1.4.0",
  "certifi==2026.1.4",
  "cffi==2.0.0",
  "cfgv==3.5.0",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "cmcrameri==1.9",
  "cmocean==4.0.3",
  "colorcet==3.1.0",
  "comm==0.2.3",
  "contourpy==1.3.3",
  "coverage==7.13.4",
  "cssselect==1.4.0",
  "cycler==0.12.1",
  "cyclopts==4.5.3",
  "debugpy==1.8.20",
  "decorator==5.2.1",
  "defusedxml==0.7.1",
  "distlib==0.4.0",
  "docstring_parser==0.17.0",
  "docutils==0.22.4",
  "entrypoints==0.4",
  "execnet==2.1.2",
  "executing==2.2.1",
  "fastjsonschema==2.21.2",
  "filelock==3.24.2",
  "flexcache==0.3",
  "flexparser==0.4",
  "fonttools==4.61.1",
  "fqdn==1.5.1",
  "frozenlist==1.8.0",
  "gmsh==4.14.1",
  "greenlet==3.3.1",
  "h5py==3.15.1",
  "hypothesis==6.151.9",
  "identify==2.6.16",
  "idna==3.11",
  "ImageHash==4.3.2",
  "ImageIO==2.37.2",
  "imagesize==1.4.1",
  "importlib_metadata==8.7.1",
  "iniconfig==2.3.0",
  "ipykernel==7.2.0",
  "ipython==9.10.0",
  "ipython_pygments_lexers==1.1.1",
  "ipywidgets==8.1.8",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "Jinja2==3.1.6",
  "json5==0.13.0",
  "jsonpointer==3.0.0",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2025.9.1",
  "jupyter-cache==1.0.1",
  "jupyter-events==0.12.0",
  "jupyter_client==8.8.0",
  "jupyter_core==5.9.1",
  "jupyter_server==2.17.0",
  "jupyter_server_proxy==4.4.0",
  "jupyter_server_terminals==0.5.4",
  "jupyterlab_pygments==0.3.0",
  "jupyterlab_widgets==3.0.16",
  "jupytext==1.19.1",
  "kiwisolver==1.4.9",
  "lark==1.3.1",
  "livereload==2.7.1",
  "lxml==6.0.2",
  "markdown-it-py==4.0.0",
  "MarkupSafe==3.0.3",
  "matplotlib==3.10.8",
  "matplotlib-inline==0.2.1",
  "mdit-py-plugins==0.5.0",
  "mdurl==0.1.2",
  "meshio==5.3.5",
  "mistune==3.2.0",
  "more-itertools==10.8.0",
  "msgpack==1.1.2",
  "multidict==6.7.1",
  "mypy_extensions==1.1.0",
  "myst-nb==1.3.0",
  "myst-parser==5.0.0",
  "narwhals==2.16.0",
  "nbclient==0.10.4",
  "nbconvert==7.17.0",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "nest-asyncio2==1.7.2",
  "nodeenv==1.10.0",
  "numpy==2.4.2",
  "ogs==6.5.7",
  "overrides==7.7.0",
  "packaging==26.0",
  "pagefind==1.4.0",
  "pagefind_bin_extended==1.4.0",
  "pandas==2.3.3",
  "pandocfilters==1.5.1",
  "papermill==2.6.0",
  "parso==0.8.6",
  "pathspec==1.0.4",
  "pbr==7.0.3",
  "pexpect==4.9.0",
  "pillow==12.1.1",
  "Pint==0.25.2",
  "platformdirs==4.9.2",
  "pluggy==1.6.0",
  "pooch==1.9.0",
  "pre_commit==4.5.1",
  "prometheus_client==0.24.1",
  "prompt_toolkit==3.0.52",
  "propcache==0.4.1",
  "psutil==7.2.2",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "pycparser==3.0",
  "pydata-sphinx-theme==0.16.1",
  "Pygments==2.19.2",
  "pyparsing==3.3.2",
  "pyproject_hooks==1.2.0",
  "pytest==9.0.2",
  "pytest-dependency==0.6.1",
  "pytest-mpl==0.18.0",
  "pytest-xdist==3.8.0",
  "python-dateutil==2.9.0.post0",
  "python-json-logger==4.0.0",
  "pyvista==0.47.0",
  "PyWavelets==1.9.0",
  "PyYAML==6.0.3",
  "pyzmq==27.1.0",
  "referencing==0.37.0",
  "requests==2.32.5",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rfc3987-syntax==1.1.0",
  "rich==14.3.2",
  "rich-rst==1.3.2",
  "roman-numerals==4.1.0",
  "rpds-py==0.30.0",
  "scipy==1.17.0",
  "scooby==0.11.0",
  "Send2Trash==2.1.0",
  "setuptools==82.0.0",
  "shapely==2.1.2",
  "simpervisor==1.0.0",
  "simpleeval==1.0.3",
  "six==1.17.0",
  "snowballstemmer==2.2.0",
  "sortedcontainers==2.4.0",
  "soupsieve==2.8.3",
  "Sphinx==9.0.4",
  "sphinx-argparse==0.4.0",
  "sphinx-autodoc-typehints==3.6.1",
  "sphinx-gallery==0.20.0",
  "sphinx_design==0.7.0",
  "sphinxcontrib-apidoc==0.6.0",
  "sphinxcontrib-applehelp==2.0.0",
  "sphinxcontrib-devhelp==2.0.0",
  "sphinxcontrib-htmlhelp==2.1.0",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-mermaid==2.0.0",
  "sphinxcontrib-programoutput==0.18",
  "sphinxcontrib-qthelp==2.0.0",
  "sphinxcontrib-serializinghtml==2.0.0",
  "SQLAlchemy==2.0.46",
  "stack-data==0.6.3",
  "tabulate==0.9.0",
  "tenacity==9.1.4",
  "terminado==0.18.1",
  "tinycss2==1.4.0",
  "tornado==6.5.4",
  "tqdm==4.67.3",
  "traitlets==5.14.3",
  "trame==3.12.0",
  "trame-client==3.11.2",
  "trame-common==1.1.1",
  "trame-server==3.10.0",
  "trame-vtk==2.11.1",
  "trame-vuetify==3.2.1",
  "typeguard==4.5.0",
  "types-html5lib==1.1.11.20251117",
  "types-lxml==2026.2.16",
  "types-PyYAML==6.0.12.20250915",
  "types-webencodings==0.5.0.20251108",
  "typing_extensions==4.15.0",
  "tzdata==2025.3",
  "uri-template==1.3.0",
  "urllib3==2.6.3",
  "vtk==9.6.0",
  "watchdog==6.0.0",
  "wcwidth==0.6.0",
  "webcolors==25.10.0",
  "webencodings==0.5.1",
  "websocket-client==1.9.0",
  "widgetsnbextension==4.0.15",
  "wslink==2.5.0",
  "xyzservices==2025.11.0",
  "yarl==1.22.0",
  "zipp==3.23.0",
]


dev = ["pre-commit>=2.20", "build", "black==24.4.0", "types-lxml>=2025.8.0",]
test = ["coverage", "hypothesis", "pytest", "pytest-xdist", "pytest-dependency"]
docs = [
  "livereload",
  "myst-parser",
  "myst_nb",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-argparse >=0.2.5, <0.5.0",
  "sphinx-autodoc-typehints",
  "sphinx-design",
  "sphinx_gallery",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-programoutput",
  "snowballstemmer<3.0.0",
  "trame-vtk>=2.6.0",
  "pagefind[extended]",
]
feflow = ["ifm_contrib>=0.2.4"]
ogs = ["ogs>=6.5.7"]
monitor = ["bokeh>=3.6.0", "ipykernel>5"]
all = ["ogstools[ogs,monitor,dev,docs,test]"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
  "--log-cli-level=INFO",
  "--tb=short",
  "--mpl",
]
xfail_strict = true
# TODO: LB enable this again, deal with MatplotlibDeprecationWarning in fe2vtu
# tests
#filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]


[tool.black]
line-length = 80
exclude = '.*/examples/.*'

[tool.mypy]
files = "ogstools/**/*.py"
# does not work when mypy invoked directly, works in pre-commit as explicitly
# stated there again:
exclude = ['.*/examples/.*']
ignore_missing_imports = true
scripts_are_modules = true
# Set to true when current issues are fixed
strict = false
# Delete following lines when strict is true:
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true
enable_incomplete_feature = ["Unpack"]
show_absolute_path = true

[tool.ruff]
target-version = "py310"
exclude = ["EXPERIMENTAL"]
line-length = 80

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",    # flake8
  "B",
  "B904", # flake8-bugbear
  "I",    # isort
  "ARG",  # flake8-unused-arguments
  "C4",   # flake8-comprehensions
  "EM",   # flake8-errmsg
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "G",    # flake8-logging-format
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
  "EXE",  # flake8-executable
  "NPY",  # NumPy specific rules
  "PD",   # pandas-vet
]
extend-ignore = [
  "PLR",   # Design related pylint codes
  "E501",  # Line too long
  # RUF005 should be disabled when using numpy, see
  # https://github.com/charliermarsh/ruff/issues/2142:
  "RUF005",
  "PT009",   # can use unittest-assertion
  "PLC0415", # import-outside-top-level
  "E402",    # module-import-not-at-top-of-file
]
typing-modules = ["mypackage._compat.typing"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
flake8-unused-arguments.ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"docs/examples/**" = ["B018"]

[tool.codespell]
ignore-words-list = "methode,ot"
skip = "*.vtu"

[tool.pyright]
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportArgumentType = false
reportCallIssue = false

[tool.pylint.messages_control]
disable = ["C0415"] # import outside toplevel
